
Changes from November 17, 2009

- [NEW] TTD* logging macros. See TTDebug.h for info.

- [NEW] [NSMutableArray addNonEmptyString:(NSString*)string]

- [NEW] [NSMutableDictionary setNonEmptyString:(NSString*)string forKey:(id)key]

- [NEW] [NSArray containsObject:(id)object withSelector:(SEL)selector]

- [DEPRECATED] TTLOG macros should no longer be used, consider switching to TTD* macros.

- [SECURITY] Don't write passwords to the console in TTURLRequests.

- [FIXED] github#67 Set the default cache expiration date for TTURLRequests to
  TT_DEFAULT_CACHE_EXPIRATION_AGE.