@@ -9,3 +9,8 @@ Current Maintainers
 -------------------
 Owen Yamauchi    github.com/oyamauchi  oyamauchi@facebook.com
 Jeff Verkoeyen   github.com/jverkoey   jeffverkoeyen@facebook.com
+
+Contributors
+------------
+uprise78         github.com/uprise78   @uprise78
+
