@@ -15,3 +15,5 @@ Changes from November 17, 2009
 
 - [FIXED] github#67 Set the default cache expiration date for TTURLRequests to
   TT_DEFAULT_CACHE_EXPIRATION_AGE.
+
+- [FIXED] github#85 Disallow recursive calls to wobble.
